--- a/public/css/ranklist.css
+++ b/public/css/ranklist.css
@@ -35,6 +35,7 @@ ul li {
     height: 33%;
     line-height: 45px;
     vertical-align: middle;
+    white-space: nowrap0;
 }
 
 .ranklist_head ul li span {
